--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <nav>
         <marquee behavior="alternate" direction="Right" scrollamount="3">
-            <h2>My Left Side All Episode</h2>
+            <h2>My Left Side All Episode BITS</h2>
         </marquee>
     </nav>
     <div class="container">
